@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.7
 Date: ????
-  Features:
+  Bugfixes:
+    - Fixed that the GUI would not refresh if the player's force is changed
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.6
 Date: 2023-01-14
